# spa

./: README.md  autotester.sh  cpplint.py  cpplint_local.sh
Team20/Code20/src/spa/: CMakeLists.txt
Team20/Code20/src/spa/integration_testing/src/: TestFrontEnd.cpp
Team20/Code20/src/spa/src/: Main.cpp  SPA.cpp  SPA.h
Team20/Code20/src/spa/src/Models/: Constants.cpp  Constants.h  PQL.cpp  PQL.h  SimpleProgram.h
Team20/Code20/src/spa/src/PKB/: Database.cpp  Database.h  PKB.cpp  PKB.h
Team20/Code20/src/spa/src/PKB/facade/: IPKBReader.h  IPKBWriter.h  PKBFacade.cpp  PKBFacade.h
Team20/Code20/src/spa/src/PKB/utils/: DatabaseUtils.h  MapUtils.h
Team20/Code20/src/spa/src/QPS/: Parser.cpp  QPSManager.cpp  QPSManager.h  Query.cpp  Query.h  QueryError.h  QueryParser.cpp  QueryParser.h  QuerySemanticError.h  QuerySyntaxError.h  QueryToken.cpp  QueryToken.h  QueryTokenizer.cpp  QueryTokenizer.h
Team20/Code20/src/spa/src/QPS/Evaluator/: AssignPatternEvaluator.cpp  AssignPatternEvaluator.h  ClauseEvaluator.cpp  ClauseEvaluator.h  EntityEvaluator.cpp  EntityEvaluator.h  IfAndWhilePatternEvaluator.cpp  IfAndWhilePatternEvaluator.h  PatternEvaluator.cpp  PatternEvaluator.h  QueryEvaluator.cpp  QueryEvaluator.h  RelationshipEvaluator.h  Result.cpp  Result.h  ResultStore.cpp  ResultStore.h  StatementEvaluator.cpp  WithEvaluator.h  (+2 more)
Team20/Code20/src/spa/src/SP/: AST.h  CallGraph.cpp  CallGraph.h  DesignExtractor.cpp  DesignExtractor.h  Parser.cpp  Parser.h  RuntimeExtractor.cpp  RuntimeExtractor.h  SPController.cpp  SPController.h  TNode.h  Token.h  Tokenizer.cpp  Tokenizer.h
(+150 files in other folders)
